**  denotes quite substantial/important changes
*** denotes really big changes 

Currently deprecated and liable to be removed: 
- bam(...,sparse=TRUE) [1.8-5]
- single penalty tensor product smooths.
- p.type!=0 in summary.gam.
	

1.8-12

** "bs" B-spline smoothing basis. B-splines with derivative based penalties
  of various orders.

* bam null deviance computation was wrong with prior weights (including 
  binomial other than binary case), and returned deviance was wrong for 
  non-binary binomial. Fixed (did not affect estimation). 

* improvements to "bfgs" optimizer to better deal with `infinite' smoothing
  parameters.

* changed scheme=3 in default 2-D plotting to grey scale version of 
  scheme=2.

* 'trichol' and 'bandchol' added for banded Cholesky decompositions, plus
  'sdiag' functions added for extracting and setting matrix sub- and
  super-  diagonals.

* p-spline constructor and Predict.matrix.pspline.smooth now allow set set 
  up of SCOP-spline monotonic smoothers, and derivatives of smooths. Not
  used in modelling functions yet. 

* s(...,bs="re") now allows known precision matrix structures to be defined
  using the `xt' argument of 's' see ?smooth.construct.re.smooth.spec for
  details and example.

* negbin() with a grid search for `theta' is no longer supported - use 
  'nb' instead.

* bug fix to bam aic computation with AR rho correction.
	
1.8-11

* bam(...,discrete=TRUE) can now handle matrix arguments to smooths (and hence
  linear functional terms).

* bam(...,discrete=TRUE) bug fix in fixed sp handling.

* bam(...,discrete = TRUE) db.drho reparameterization fix, fixing nonsensical 
  edf2. Also bam edf2 limited to maximum of edf1.

* smoothCon rescaling of S changed to use efficient matrix norm in place of
  relatively slow computation involving model matrix crossproduct.  

* bam aic corrected for AR model if present.
	
* Added select=TRUE argument to 'bam'.

* Several discrete prediction fixes including improved thread safety.
