@@ -12,6 +12,9 @@ Currently deprecated and liable to be removed:
 ** "bs" B-spline smoothing basis. B-splines with derivative based penalties
   of various orders.
 
+* 'gamm' now uses a fixed scale parameter in PQL estimation for Poisson and 
+  binomial data via the `sigma' option in lmeControl.
+
 * bam null deviance computation was wrong with prior weights (including 
   binomial other than binary case), and returned deviance was wrong for 
   non-binary binomial. Fixed (did not affect estimation). 
